fixed icon vertical alignment inside button

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,15 @@ body {
   touch-action: none;
 }
 
+.brand-logo {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+i {
+  vertical-align: middle;
+}
+
 button,
 input {
   font: 14px Futura, sans-serif;
